# cmb-ml

./: .gitignore  README.md  camb_write_cl.py  check_pysm_version.py  check_variation_in_base.py  check_variation_in_base_console_output1.txt  check_variation_in_base_console_output2.txt  check_variation_result.txt  cmb_component.py  cmb_component_old.py  cmb_spectrum.txt  component_cmb.py  component_instrument.py  component_instrument_noise.py  component_seed_maker.py  conda_packages.txt  cosmo_params.py  demo_preprocess.py  figure_compare_map_post.py  figure_compare_map_post_grid_search.py  figure_contaminants.py  figure_features_labels.py  figure_features_labels_OLD.py  first_sim.py  fixed_map_synth1.py  fixed_map_synth2.py  fixed_map_synth3.py  fixed_map_synth4.py  get_box_science_assets.py  get_caltech_maps.sh  get_planck_maps_caltech.sh  get_wmap_params.py  hydra_filesets.py  hydra_manager.py  hydra_test.py  hydra_test10_try_make_1_sim_from_conf.py  hydra_test11_make_ind_cosmo_param_files.py  hydra_test12_make_sims.py  hydra_test13_make_cmb_only_sims.py  hydra_test1_print_confg.py  (+71 more)
cfg/: config.yaml  config_128.yaml  config_128_sim.yaml  config_2048.yaml  config_32.yaml  config_32_sim.yaml  config_512.yaml  config_cmbnncs.yaml  config_cmbnncs_128.yaml  config_cmbnncs_32.yaml  config_cmbnncs_t.yaml  config_comp_models_t.yaml  config_comp_models_t_128.yaml  config_demo_dataset.yaml  config_get_box_science_assets.yaml  config_get_orig_science_assets.yaml  config_get_science_assets.yaml  config_no_out.yaml  config_petroff.yaml  config_petroff_128.yaml  config_pyilc_t.yaml  (+10 more)
(+434 files in other folders)
